--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^16.2.3",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
+    "@angular/material": "^16.2.3",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/platform-server": "^16.2.0",
@@ -26,6 +28,7 @@
     "@nguniversal/express-engine": "^16.2.0",
     "express": "^4.15.2",
     "rxjs": "~7.8.0",
+    "sqlite-vss": "^0.1.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
