--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "my-app",
   "version": "0.0.0",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -26,7 +29,9 @@
     "@angular/platform-server": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@nguniversal/express-engine": "^16.2.0",
+    "dotenv": "^16.3.1",
     "express": "^4.15.2",
+    "langchain": "^0.0.146",
     "rxjs": "~7.8.0",
     "sqlite-vss": "^0.1.2",
     "tslib": "^2.3.0",
